# PContext

./: LICENSE  README.md  __init__.py  pyproject.toml
cli/: launcher.py  main.py
core/: deps.py  discovery.py  errors.py  logs.py  resources.py  results.py  services.py  types.py
docs/answers/: prompt2_gpt5high_1.md  prompt2_gpt5high_2.md
docs/prompts/: extra.md  init_prompt.md  prompt2.md
examples/: one_shot_example.py  service_example.py  upload_temp_sh.py  yolo_detect_http.py  yolo_detect_proxy.py  yolo_service.py  yolo_service_http.py
installers/: install_nautilus.py  install_windows.py
os_integration/common/: clipboard.py
pcontext/cli/: daemonctl.py
pcontext/core/: config.py  envs.py  ipc.py  metadata.py  params.py  registry.py  runner.py  utils.py
pcontext/daemon/: main.py
pcontext/os_integration/common/: shell_open.py
pcontext/os_integration/windows/: context_menu.py
pcontext/ui/popup/: popup_menu.py
pcontext/ui/tray/: dir_watch.py  params_dialog.py  services_view.py  tasks_view.py
pcontext/workers/: python_worker.py
ui/tray/: settings_dialog.py  tray_app.py
workers/: service_worker.py
